# questfoundry-ng

./: .gitignore  AGENTS.md  README.md  REVIEW.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml
corpus/: README.md
docs/: BACKLOG.md  STATUS.md  decision-log.md
docs/adr/: 0000-template.md  README.md
docs/design/: 00-vision.md  01-story-model.md  02-pipeline.md  03-architecture.md  04-export-and-play.md  05-roadmap.md
docs/heritage/: README.md  how-branching-stories-work.md  semantic-conventions.md  story-graph-ontology.md
docs/plans/: cosmetic-forks.md  error-message-audit.md  m6-craft-corpus.md  m8-depth-scale.md  passages-chunking.md  pov-narration-scope.md  pov-sequences.md  prose-quality.md  reading-difficulty.md  review-contract.md  rotating-pov-build.md  rotating-pov.md  (+2 more)
tests/: conftest.py  scale.py  test_cli_graph.py  test_density.py  test_dress.py  test_echo.py  test_export.py  test_fill.py  test_fork_loop.py  test_gamebook.py  test_golden.py  test_grow.py  test_illustrate.py  test_invariants.py  test_llm_adapter.py  test_models.py  test_multihard.py  test_mutations.py  test_narration_scope.py  test_ollama_provider.py  test_passages.py  test_pipeline_e2e.py  test_pipeline_e2e_craft.py  test_play.py  test_prompts.py  test_properties.py  test_proposal_schemas.py  test_refpin.py  test_rerun.py  test_research.py  test_research_runner.py  test_resume.py  test_review.py  test_roundtrip.py  test_runner.py  test_scale.py  test_scene_type.py  test_scheme.py  test_seed.py  test_sequences.py  (+5 more)
(+4279 files in other folders)
