[project]
name = "questfoundry"
version = "0.1.0"
description = "A story compiler: premise in, playable branching gamebook out."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
    "jinja2>=3.1",
    "anthropic>=0.40",
    "openai>=1.60",
]

[project.scripts]
qf = "questfoundry.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "hypothesis>=6",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/questfoundry"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# typer's idiom is Option()/Argument() calls in parameter defaults
"src/questfoundry/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
